[package]
name = "bluez-battery"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Extract battery info from BlueZ daemon via D-Bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
structopt = "0.3"
anyhow = "1"
display-error-chain = "0.1.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
regex = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_test = "1"
