[package]
name = "bluez-battery"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Extract battery info from BlueZ daemon via D-Bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
structopt = { version = "0.3", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }
display-error-chain = "0.1.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
regex = { version = "1", default-features = false, features = ["std"] }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_test = "1"

[features]
default = [ "with_serde" ]
with_serde = ["serde", "serde_json"]
